Fix more colcon build warnings

--- a/gps_umd/package.xml
+++ b/gps_umd/package.xml
@@ -15,4 +15,8 @@
   <exec_depend>gpsd_client</exec_depend>
   <exec_depend>gps_msgs</exec_depend>
   <exec_depend>gps_tools</exec_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
